--- a/src/templates/index/base.html
+++ b/src/templates/index/base.html
@@ -12,6 +12,13 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+      href="/static/iit/css/index.css"
+      rel="stylesheet"
+      />
+    <script
+      src="/static/jquery/jquery-3.6.0.slim.min.js"
+    ></script>
 
     <title>{% block site_title %}{% endblock %}</title>
   </head>
@@ -29,6 +36,9 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
+    ></script>
+    <script
+      src="/static/iit/js/index.js"
     ></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
