--- a/src/templates/iit/index/confirmation.html
+++ b/src/templates/iit/index/confirmation.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "iit/index/base.html" %}
 
 {% block title %}
 <h1 class="title">An invitation is on its way!</h1>
