--- a/src/templates/iit/inc/step/all.html
+++ b/src/templates/iit/inc/step/all.html
@@ -9,7 +9,7 @@
   >
     <p class="fs-1">{{ item.label }}</p>
     {% if item.icon %}
-    <div class="container-fluid">{{item.icon}}</div>
+    <div class="container-fluid">{{ item.icon|safe }}</div>
     {% endif %}
   </a>
   {% endif %}
