--- a/src/templates/iit/index/timeblock_selection.html
+++ b/src/templates/iit/index/timeblock_selection.html
@@ -10,7 +10,7 @@
 
 {% block main %}
 <div class="container">
-    <div class="container-fluid">
+    <div class="row">
         {% include "iit/inc/components/back-button.html" %}
     </div>
 
