--- a/src/templates/iit/inc/step/final.html
+++ b/src/templates/iit/inc/step/final.html
@@ -19,7 +19,7 @@
             {% endfor %}
             </select>
             <p class="error">
-                {% if errors.form_time == "null" %}
+                {% if errors and errors.form_time == "null" %}
                 This field is required.
                 {% endif %}
             </p>
@@ -32,7 +32,7 @@
                     placeholder="Required - user@example.com"
                     />
             <p class="error">
-                {% if errors.form_email == "null" %}
+                {% if errors and errors.form_email == "null" %}
                 This field is required.
                 {% endif %}
             </p>
@@ -44,7 +44,7 @@
                     name="email"
             />
             <p class="error">
-                {% if errors.form_name == "null" %}
+                {% if errors and errors.form_name == "null" %}
                 This field is required.
                 {% endif %}
             </p>
