--- a/src/templates/iit/index/base.html
+++ b/src/templates/iit/index/base.html
@@ -53,7 +53,9 @@
       {% block header %}{% endblock header %}
     </section>
     
-    <h1 class="title">{% block title %}{% endblock %}</h1>
+    <div class="title container">
+      <h1 class="title">{% block title %}{% endblock %}</h1>
+    </div>
 
     <main>{% block main %}{% endblock %}</main>
 
