fix some context and view issues.

--- a/iit/templates/iit/inc/sections/footer.html
+++ b/iit/templates/iit/inc/sections/footer.html
@@ -1,7 +1,7 @@
 <ul class="navbar-nav me-auto mb-2 mb-lg-0 px-4 py-1 text-secondary">
     <li class="nav-item">
-        {% if cfg.variables.organization_name %}
-        <strong>{{ cfg.variables.organization_name }}</strong>
+        {% if config.variables.organization_name %}
+        <strong>{{ config.variables.organization_name }}</strong>
         {% else %}
         <strong>This site</strong>
         {% endif %}
