--- a/iit/templates/iit/choices.html
+++ b/iit/templates/iit/choices.html
@@ -1,4 +1,3 @@
 {% extends "iit/base.html" %}
 
-{% block choices %}
-{% endblock %}
+{% block main %}{% block choices %}{% endblock %}{% endblock %}
