--- a/iit/templates/iit/choices.html
+++ b/iit/templates/iit/choices.html
@@ -1,3 +1,18 @@
 {% extends "iit/base.html" %}
 
-{% block main %}{% block choices %}{% endblock %}{% endblock %}
+{% block main %}
+<div class="dropdown iit-dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+   Timezone: {{ timezone }}
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <div>
+      <input type="text" style="position: absolute" />
+    </div>
+    {% for tz in all_timezones %}
+        <li><a class="dropdown-item" href="{{request.domain}}{{request.path}}?timezone={{ tz.value }}">{{ tz.label }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
+{% block choices %}{% endblock %}
+{% endblock %}
